--- a/src/styles/bgColor.scss
+++ b/src/styles/bgColor.scss
@@ -2,4 +2,10 @@
   background-color: #ececec;
   width: 100%;
   height: 100%;
+  // 步骤条文字大小
+  .font-style ::v-deep .el-step__title {
+    font-size: 12px;
+  }
 }
+//边框颜色
+$borderColor: #ececec;
