--- a/src/styles/commodity.scss
+++ b/src/styles/commodity.scss
@@ -1,7 +1,11 @@
-@mixin commodity  {
+//超出文本三点显示
+@mixin ellipsis{
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 140px;
-  text-align: center;
+}
+// 图片的大小
+@mixin portrait{
+  width: 50px;
+  height: 50px;
 }
